# VORNIQ

./: .gitignore  ARCHITECTURE.md  Finaltask.md  Links.md  README.md  agents.md  antigravity.md  task.md  task1.md
backend/: .env.example  dependencies.py  exceptions.py  main.py  pyproject.toml
backend/agents/: __init__.py
backend/agents/financial/: __init__.py
backend/agents/financial/analyst/: README.md  __init__.py  analyst_agent.py  analyst_routes.py
backend/agents/financial/forecast/: README.md  __init__.py  forecast_agent.py  forecast_routes.py
backend/agents/financial/memory/: API_REFERENCE.md  DEBUGGING_GUIDE.md  POSTMAN_COLLECTION.json  POSTMAN_ENVIRONMENT.json  README.md  TESTING.md  VERIFICATION_CHECKLIST.md  __init__.py  config.py  dependencies.py  health_routes.py  memory_agent.py  memory_routes.py
backend/agents/financial/orchestrator/: __init__.py  orchestrator_routes.py  orchestrator_service.py  schemas.py
backend/agents/financial/parser/: __init__.py  parser_agent.py
backend/agents/financial/report/: README.md  __init__.py  report_agent.py  report_routes.py
backend/agents/financial/risk/: README.md  __init__.py  risk_agent.py  risk_routes.py
backend/agents/shared/: __init__.py
backend/agents/shared/config/: __init__.py  settings.py
backend/agents/shared/prompts/: __init__.py
backend/agents/shared/resources/: currencies.json  financial_dictionary.json  units.json  validation_rules.json
backend/agents/shared/schemas/: __init__.py  (+1 more)
backend/api/: __init__.py
backend/vorniq.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+99 files in other folders)
