[project]
name = "vorniq"
version = "0.1.0"
description = "Enterprise Multi-Agent Financial Intelligence Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.12",

    # PDF extraction
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",

    # Excel extraction
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",

    # OCR
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",

    # Structured logging
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[tool.setuptools]
packages = ["agents", "api"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
